# dumbly

./: CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
.hypothesis/constants/: 0fea0c2a86135786  1aed0403821a6c7d  38acea78ca9ea12f  4d53687171db6752  6050745a77119122  6748a0828402e4a9  71a0eed56f79cd24  97d25a49ace39af8  a6083398fb4616be  b1f5934e3629513e  c3ca4b47c800cf0f  e2c6ebe0625773c9  e995cf4e78283710  eedbba7c3d89d2e8  f34d89495e660627  (+1 more)
.letta/: settings.json  settings.local.json
backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/.hypothesis/constants/: 0cfdba5b57454649  44bd2b38da3194ca  7064ddb15f2e8058  a2c701d197e94bde  ca2bb02d6ce4d3c6  f54503a5d47d7e9d
backend/.hypothesis/examples/04e6b3400353b141/: 08a266dda764c54d  239fa8e4bcd51ab0  23f15bed5cb1d58d  27fb6ed69923d5af  91848abb74fda2e6  9897446e85b95514  9b4e7b4946bfe7f3  f1c46bfc8b3013f9
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  base.py  business_modeler.py  market_researcher.py  paper_analyzer.py  paper_discovery.py  saas_ideator.py  technical_architect.py
backend/app/models/: __init__.py  domain.py  requests.py  responses.py
backend/app/routers/: __init__.py  analysis.py  export.py  health.py  stream.py
backend/app/services/: __init__.py  analysis_service.py  export_service.py  paper_service.py  repository.py  stream_manager.py
backend/tests/: test_detached_instance_bug.py  test_preservation_properties.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
(+29 files in other folders)
