[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==2.5.3",
    "aiohttp==3.9.1",
    "anthropic>=0.83.0",
    "arxiv==2.1.0",
    "asyncpg>=0.31.0",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastapi==0.104.1",
    "openai>=2.21.0",
    "psycopg[binary]>=3.3.3",
    "pydantic==2.5.0",
    "pypdf>=6.7.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlmodel>=0.0.30",
    "uvicorn[standard]==0.24.0",
]
